--- a/SubTerra_v1.ipynb
+++ b/SubTerra_v1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNuQ39C2D3tUvOTbU3XcUsy",
+      "authorship_tag": "ABX9TyN+dFcjcAFHQTtZTZCDa8jb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "tiXFhIX01D9h"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "sDA2s8Dn2Gp8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "lWEo9fi05cla"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,14 +135,93 @@
       "metadata": {
         "id": "HdQVhIuP5out"
       },
-      "execution_count": 4,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def split_data(X, y, test_size=0.25, random_state=42):\n",
+        "  global X_train, X_test, y_train, y_test, scaler\n",
+        "\n",
+        "  X_train, X_test, y_train, y_test=train_test_split(\n",
+        "      X, y, test_size=test_size, random_state=random_state,\n",
+        "      stratify=y, shuffle=True\n",
+        "  )\n",
+        "\n",
+        "  #Scale features for better perfoemance\n",
+        "  X_train_scaled=scaler.fit_transform(X_train)\n",
+        "  X_test_scaled=scaler.transform(X_test)\n",
+        "\n",
+        "  print(f\"Training set: {X_train.shape[0]} samples\")\n",
+        "  print(f\"Testing set: {X_test.shape[0]} samples\")\n",
+        "\n",
+        "  return X_train, X_test, y_train, y_test, X_train_scaled, X_test_scaled"
+      ],
+      "metadata": {
+        "id": "Ofrt9WQl9tcr"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_models(X_train, y_train, X_train_scaled, random_state=42):\n",
+        "  global models\n",
+        "\n",
+        "  print(\"\\nTraining models...\")\n",
+        "\n",
+        "  #Decision tree\n",
+        "  models['decision_tree']=DecisionTreeClassfier(\n",
+        "      max_depth=8,\n",
+        "      min_samples_split=10,\n",
+        "      min_samples_leaf=5,\n",
+        "      random_state=random_state\n",
+        "  )\n",
+        "\n",
+        "  #Random forest\n",
+        "  models['random_forest']=RandomForestClassifier(\n",
+        "      n_estimators=100,\n",
+        "      max_depth=10,\n",
+        "      min_samples_split=10,\n",
+        "      random_state=random_state,\n",
+        "      n_jobs=-1\n",
+        "  )\n",
+        "\n",
+        "  #XGBoost\n",
+        "  if XGBOOST_AVAILABLE:\n",
+        "    models['wgboost']=XGBClassifer(\n",
+        "        n_estimators=100,\n",
+        "        max_depth=6,\n",
+        "        learning_rate=0.1,\n",
+        "        random_state=random_state,\n",
+        "        eval_metric='logloss',\n",
+        "        use_label_encoder=False\n",
+        "    )\n",
+        "\n",
+        "  #Train all models\n",
+        "  for name, model in models.items():\n",
+        "    print(f\"Training {name}...\")\n",
+        "    if name == 'xgbost':\n",
+        "      model.fit(X_train_scaled, y_train)\n",
+        "    else:\n",
+        "      model.fit(X_train, y_train)\n",
+        "\n",
+        "  print(\"All models trained successfully\")\n",
+        "  return models"
+      ],
+      "metadata": {
+        "id": "dMT_-78kiuco"
+      },
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ofrt9WQl9tcr"
+        "id": "oqK2UetIlgQt"
       },
       "execution_count": null,
       "outputs": []
