--- a/SubTerra_v1.ipynb
+++ b/SubTerra_v1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+dFcjcAFHQTtZTZCDa8jb",
+      "authorship_tag": "ABX9TyNL7kjCz5IQUBDCcaNFC/7I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "tiXFhIX01D9h"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "sDA2s8Dn2Gp8"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "lWEo9fi05cla"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "HdQVhIuP5out"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "Ofrt9WQl9tcr"
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -214,14 +214,211 @@
       "metadata": {
         "id": "dMT_-78kiuco"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def evaluate_models(X_test, y_test, X_test_scaled):\n",
+        "  print(\"\\n\"+\"=\"*60)\n",
+        "  print(\"MODEL EVALUATION RESULTS\")\n",
+        "  print(\"=\"*60)\n",
+        "\n",
+        "  results={}\n",
+        "\n",
+        "  for name, model in models.items():\n",
+        "    print(f\"\\n--- {name.upper().replace('_', ' ')} ---\")\n",
+        "\n",
+        "    #Make predictions\n",
+        "    if name == 'xgboost':\n",
+        "      y_pred=model.predict(X_test_scaled)\n",
+        "    else:\n",
+        "      y_pred=model.predict(X_test)\n",
+        "\n",
+        "    # Calculate accuracy\n",
+        "    accuracy=accuracy_score(y_test, y_pred)\n",
+        "    results[name]=accuracy\n",
+        "\n",
+        "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(y_test, y_pred))\n",
+        "\n",
+        "    # COnfusion matrix\n",
+        "    cm=confusion_matrix(y_test, y_pred)\n",
+        "    print(f\"Confusion Matrix: \\n{cm}\")\n",
+        "\n",
+        "  #Best model\n",
+        "  best_model=max(results, key=results.get)\n",
+        "  print(f\"\\nBest performing model: {best_model} (Accuracy: {results[best_model]:.4f})\")\n",
+        "  return results"
+      ],
       "metadata": {
         "id": "oqK2UetIlgQt"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_feature_importance(top_n=15):\n",
+        "  n_models=len(models)\n",
+        "  fig, axes=plt.subplots(1, n_models, figsize=(6*n_models, 8))\n",
+        "\n",
+        "  if n_models==1:\n",
+        "    axes=[axes]\n",
+        "\n",
+        "  for idx, (name, model) in enumerate(models.items()):\n",
+        "    if hasattr(model, 'feature_importances_'):\n",
+        "      importances=model.feature_importances_\n",
+        "      indices=np.argsort(importances)[::-1][:top_n]\n",
+        "\n",
+        "      ax=axes[idx]\n",
+        "      ax.barh(range(len(indices)), importances[indices])\n",
+        "      ax.set_yticks(range(len(indices)))\n",
+        "      ax.set_yticklabels([feature_names[i] for i in indices])\n",
+        "      ax.set_xlabel('Feature Importance')\n",
+        "      ax.set_title(f'{name.replace(\"_\", \" \").title()}\\nTop {top_n} Features')\n",
+        "      ax.invert_yaxis()\n",
+        "\n",
+        "  plt.tight_layout()\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "i5BA7dnM6a2e"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def explain_decision_tree():\n",
+        "  if 'decision_tree' in models:\n",
+        "    print(\"\\n\"+\"=\"*60)\n",
+        "    print(\"DECISION TREE RULES\")\n",
+        "    print(\"=\"*60)\n",
+        "    tree_rules=export_text(\n",
+        "        models['decision_tree'],\n",
+        "        feature_names=feature_names,\n",
+        "        max_depth=5\n",
+        "    )\n",
+        "    print(tree_rules)\n",
+        "  else:\n",
+        "    print(\"Decision tree not available for explanation\")"
+      ],
+      "metadata": {
+        "id": "z2qt4hjO63gy"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def predict_single_sample(features, model_name='decision_tree'):\n",
+        "  if model_name not in models:\n",
+        "    raise ValueError(f\"Model {model_name} not availbale\")\n",
+        "\n",
+        "  model=models[model_name]\n",
+        "\n",
+        "  #Convert features to array\n",
+        "  if isinstance(features, dict):\n",
+        "    feature_array=np.array([features.get(name, 0) for name in feature_names])\n",
+        "  else:\n",
+        "    feature_array=np.array(features)\n",
+        "\n",
+        "  feature_array=feature_array.reshape(1, -1)\n",
+        "\n",
+        "  #Scale if needed\n",
+        "  if model_name=='xgboost':\n",
+        "    feature_array=scaler.transform(feature_array)\n",
+        "\n",
+        "  #Make prediction\n",
+        "  prediction=model.predict(feature_array)[0]\n",
+        "\n",
+        "  #Get probability if available\n",
+        "  if hasattr(model, 'predict_proba'):\n",
+        "    if model_name=='xgboost':\n",
+        "      probabilities=model.predict_proba(feature_array.reshape(1, -1))[0]\n",
+        "    else:\n",
+        "      probabilities=None\n",
+        "\n",
+        "    return {\n",
+        "        'prediction': int(prediction),\n",
+        "        'prediction_label': 'Positive' if prediction==1 else 'Negative',\n",
+        "        'probabilities': probabilities,\n",
+        "        'model_used': model_name\n",
+        "    }\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DSoD6Cin8Xw4"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def interactive_classification():\n",
+        "  print(\"\\n\"+\"=\"*60)\n",
+        "  print(\"INTERACTIVE GEOTHERMAL POTENTIAL CLASSIFIER\")\n",
+        "  print(\"=\"*60)\n",
+        "  print(\"Enter feature values to classify geothermal potential\")\n",
+        "  print(\"Press Ctrl+C to exit\")\n",
+        "\n",
+        "  while True:\n",
+        "    try:\n",
+        "      features={}\n",
+        "      print(f\"\\nEnter values for {len(feature_names)} features:\")\n",
+        "\n",
+        "      for feature in feature_names:\n",
+        "        while True:\n",
+        "          try:\n",
+        "            value=input(f\"{feature}:\")\n",
+        "            features[feature]=float(value)\n",
+        "            break\n",
+        "          except ValueError:\n",
+        "            print(\"Please enter a valid number\")\n",
+        "\n",
+        "      #Get predictions from all models\n",
+        "      print(\"\\nPrediction Results:\")\n",
+        "      print(\"-\"*40)\n",
+        "\n",
+        "      for model_name in models.keys():\n",
+        "        result=predict_single_sample(features, model_name)\n",
+        "        print(f\"{model_name.replace('_', ' ').title()}: {result['prediction_label']}\")\n",
+        "\n",
+        "        if result['probabilities'] is not None:\n",
+        "          prob_negative=result['probabilities'][0]\n",
+        "          prob_positive=result['probabilities'][1]\n",
+        "          print(f\"Confidence: {max(prob_negative, prob_positive):.3f}\")\n",
+        "\n",
+        "      print(\"\\nWould you like to classify another sample? (y/n): \", end=\"\")\n",
+        "      if input().lower() !='y':\n",
+        "        break\n",
+        "\n",
+        "    except KeyboardInterrupt:\n",
+        "      print(\"\\nExiting interactive mode.\")\n",
+        "      break\n",
+        "    except Exception as e:\n",
+        "      print(f\"Error: {str(e)}\")"
+      ],
+      "metadata": {
+        "id": "IyEohaAM_vJG"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def run_full_pipeline(filepath=)"
+      ],
+      "metadata": {
+        "id": "xaGg945WDl8f"
       },
       "execution_count": null,
       "outputs": []
