--- a/SubTerra_v1.ipynb
+++ b/SubTerra_v1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtr3PrCI4MAUYoCspubRY3",
+      "authorship_tag": "ABX9TyPxco6exukNX8GPpooXbXqn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 117,
       "metadata": {
         "id": "tiXFhIX01D9h"
       },
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "sDA2s8Dn2Gp8"
       },
-      "execution_count": 55,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "lWEo9fi05cla"
       },
-      "execution_count": 56,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "HdQVhIuP5out"
       },
-      "execution_count": 57,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "Ofrt9WQl9tcr"
       },
-      "execution_count": 58,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "dMT_-78kiuco"
       },
-      "execution_count": 59,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -256,7 +256,7 @@
       "metadata": {
         "id": "oqK2UetIlgQt"
       },
-      "execution_count": 60,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "i5BA7dnM6a2e"
       },
-      "execution_count": 61,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "z2qt4hjO63gy"
       },
-      "execution_count": 62,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -356,60 +356,146 @@
       "metadata": {
         "id": "DSoD6Cin8Xw4"
       },
-      "execution_count": 63,
+      "execution_count": 126,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def interactive_classification():\n",
-        "  print(\"\\n\"+\"=\"*60)\n",
-        "  print(\"INTERACTIVE GEOTHERMAL POTENTIAL CLASSIFIER\")\n",
-        "  print(\"=\"*60)\n",
-        "  print(\"Enter feature values to classify geothermal potential\")\n",
-        "  print(\"Press Ctrl+C to exit\")\n",
+        "    \"\"\"Interactive CLI for classifying new samples.\"\"\"\n",
+        "    # Check if models are trained\n",
+        "    if not models:\n",
+        "        print(\"Error: No models have been trained yet. Please run the training pipeline first.\")\n",
+        "        return\n",
         "\n",
-        "  while True:\n",
-        "    try:\n",
-        "      features={}\n",
-        "      print(f\"\\nEnter values for {len(feature_names)} features:\")\n",
+        "    if feature_names is None:\n",
+        "        print(\"Error: Feature names not available. Please load data first.\")\n",
+        "        return\n",
         "\n",
-        "      for feature in feature_names:\n",
-        "        while True:\n",
-        "          try:\n",
-        "            value=input(f\"{feature}:\")\n",
-        "            features[feature]=float(value)\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"INTERACTIVE GEOTHERMAL POTENTIAL CLASSIFIER\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(\"Enter feature values to classify geothermal potential\")\n",
+        "    print(f\"Required features: {len(feature_names)}\")\n",
+        "    print(\"Commands: 'quit' or 'exit' to stop, 'help' for feature list\")\n",
+        "    print(\"=\"*60)\n",
+        "\n",
+        "    while True:\n",
+        "        try:\n",
+        "            print(f\"\\n--- New Classification ---\")\n",
+        "            user_input = input(\"Press Enter to start classification (or type command): \").strip().lower()\n",
+        "\n",
+        "            if user_input in ['quit', 'exit', 'q']:\n",
+        "                print(\"Exiting interactive mode.\")\n",
+        "                break\n",
+        "            elif user_input == 'help':\n",
+        "                print(\"\\nRequired Features:\")\n",
+        "                for i, feature in enumerate(feature_names, 1):\n",
+        "                    print(f\"{i:2d}. {feature}\")\n",
+        "                continue\n",
+        "            elif user_input and user_input not in ['', 'start', 'begin']:\n",
+        "                print(\"Unknown command. Use 'help', 'quit', or press Enter to classify.\")\n",
+        "                continue\n",
+        "\n",
+        "            features = {}\n",
+        "            print(f\"\\nEnter values for {len(feature_names)} features:\")\n",
+        "            print(\"(Type 'skip' to cancel this classification)\")\n",
+        "\n",
+        "            # Collect feature values\n",
+        "            cancelled = False\n",
+        "            for i, feature in enumerate(feature_names, 1):\n",
+        "                while True:\n",
+        "                    try:\n",
+        "                        value_input = input(f\"{i:2d}. {feature}: \").strip()\n",
+        "\n",
+        "                        if value_input.lower() in ['skip', 'cancel', 'abort']:\n",
+        "                            print(\"Classification cancelled.\")\n",
+        "                            cancelled = True\n",
+        "                            break\n",
+        "\n",
+        "                        if value_input == '':\n",
+        "                            print(\"Please enter a value (or 'skip' to cancel).\")\n",
+        "                            continue\n",
+        "\n",
+        "                        features[feature] = float(value_input)\n",
+        "                        break\n",
+        "\n",
+        "                    except ValueError:\n",
+        "                        print(\"Please enter a valid number.\")\n",
+        "\n",
+        "                if cancelled:\n",
+        "                    break\n",
+        "\n",
+        "            if cancelled:\n",
+        "                continue\n",
+        "\n",
+        "            # Make predictions\n",
+        "            print(\"\\n\" + \"=\"*40)\n",
+        "            print(\"PREDICTION RESULTS\")\n",
+        "            print(\"=\"*40)\n",
+        "\n",
+        "            all_predictions = []\n",
+        "\n",
+        "            for model_name in models.keys():\n",
+        "                try:\n",
+        "                    result = predict_single_sample(features, model_name)\n",
+        "                    model_display = model_name.replace('_', ' ').title()\n",
+        "\n",
+        "                    print(f\"\\n{model_display}:\")\n",
+        "                    print(f\"  Prediction: {result['prediction_label']}\")\n",
+        "\n",
+        "                    if result['probabilities'] is not None:\n",
+        "                        prob_negative = result['probabilities'][0]\n",
+        "                        prob_positive = result['probabilities'][1]\n",
+        "                        confidence = max(prob_negative, prob_positive)\n",
+        "                        print(f\"  Confidence: {confidence:.3f} ({confidence*100:.1f}%)\")\n",
+        "                        print(f\"  Probabilities: Negative={prob_negative:.3f}, Positive={prob_positive:.3f}\")\n",
+        "\n",
+        "                    all_predictions.append(result['prediction'])\n",
+        "\n",
+        "                except Exception as e:\n",
+        "                    print(f\"  Error with {model_display}: {str(e)}\")\n",
+        "\n",
+        "            # Consensus prediction\n",
+        "            if all_predictions:\n",
+        "                positive_votes = sum(all_predictions)\n",
+        "                total_votes = len(all_predictions)\n",
+        "                consensus = \"Positive\" if positive_votes > total_votes/2 else \"Negative\"\n",
+        "\n",
+        "                print(f\"\\n{'='*40}\")\n",
+        "                print(f\"CONSENSUS: {consensus}\")\n",
+        "                print(f\"Votes: {positive_votes}/{total_votes} models predict Positive\")\n",
+        "                print(f\"{'='*40}\")\n",
+        "\n",
+        "            # Ask for next action\n",
+        "            while True:\n",
+        "                next_action = input(\"\\nOptions: [c]lassify another, [h]elp, [q]uit: \").strip().lower()\n",
+        "                if next_action in ['c', 'classify', '']:\n",
+        "                    break\n",
+        "                elif next_action in ['h', 'help']:\n",
+        "                    print(\"\\nAvailable commands:\")\n",
+        "                    print(\"  c, classify, Enter - Classify another sample\")\n",
+        "                    print(\"  h, help - Show this help\")\n",
+        "                    print(\"  q, quit, exit - Exit interactive mode\")\n",
+        "                    print(\"  skip, cancel - Cancel current classification\")\n",
+        "                elif next_action in ['q', 'quit', 'exit']:\n",
+        "                    print(\"Exiting interactive mode.\")\n",
+        "                    return\n",
+        "                else:\n",
+        "                    print(\"Invalid option. Please choose c, h, or q.\")\n",
+        "\n",
+        "        except KeyboardInterrupt:\n",
+        "            print(\"\\n\\nExiting interactive mode (Ctrl+C pressed).\")\n",
         "            break\n",
-        "          except ValueError:\n",
-        "            print(\"Please enter a valid number\")\n",
-        "\n",
-        "      #Get predictions from all models\n",
-        "      print(\"\\nPrediction Results:\")\n",
-        "      print(\"-\"*40)\n",
-        "\n",
-        "      for model_name in models.keys():\n",
-        "        result=predict_single_sample(features, model_name)\n",
-        "        print(f\"{model_name.replace('_', ' ').title()}: {result['prediction_label']}\")\n",
-        "\n",
-        "        if result['probabilities'] is not None:\n",
-        "          prob_negative=result['probabilities'][0]\n",
-        "          prob_positive=result['probabilities'][1]\n",
-        "          print(f\"Confidence: {max(prob_negative, prob_positive):.3f}\")\n",
-        "\n",
-        "      print(\"\\nWould you like to classify another sample? (y/n): \", end=\"\")\n",
-        "      if input().lower() !='y':\n",
-        "        break\n",
-        "\n",
-        "    except KeyboardInterrupt:\n",
-        "      print(\"\\nExiting interactive mode.\")\n",
-        "      break\n",
-        "    except Exception as e:\n",
-        "      print(f\"Error: {str(e)}\")"
+        "        except Exception as e:\n",
+        "            print(f\"Unexpected error: {str(e)}\")\n",
+        "            print(\"Please try again or type 'quit' to exit.\")"
       ],
       "metadata": {
-        "id": "IyEohaAM_vJG"
+        "id": "db23vpVDQjcR"
       },
-      "execution_count": 64,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -443,7 +529,7 @@
       "metadata": {
         "id": "xaGg945WDl8f"
       },
-      "execution_count": 65,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -456,14 +542,14 @@
         "    interactive_classification()"
       ],
       "metadata": {
-        "id": "LpbFfkPhLM8C",
-        "outputId": "074e86a6-1484-4888-9e05-d016dbf56090",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "LpbFfkPhLM8C",
+        "outputId": "536db9d2-2aaf-4368-cc3f-fb3ee9791de9"
       },
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -583,9 +669,14 @@
             "INTERACTIVE GEOTHERMAL POTENTIAL CLASSIFIER\n",
             "============================================================\n",
             "Enter feature values to classify geothermal potential\n",
-            "Press Ctrl+C to exit\n",
+            "Required features: 10\n",
+            "Commands: 'quit' or 'exit' to stop, 'help' for feature list\n",
+            "============================================================\n",
             "\n",
-            "Enter values for 10 features:\n"
+            "--- New Classification ---\n",
+            "\n",
+            "\n",
+            "Exiting interactive mode (Ctrl+C pressed).\n"
           ]
         }
       ]
